sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:7: error: value =! is not a member of Int
while (l3 =! getNombreValeurs())
          ^