sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {

var trie: Int = 0;
var l3: Int = 0;

while (l3 =! getNombreValeurs())
{

l3=l3+1;
for(i <- 0 to (getNombreValeurs()-2))  {
	if(getValeur(i+1) < getValeur(i)) {
		
		echange(i+1,i);
		
	}

	
}
}



}
